Workshop introp a Python

--- a/Datos_Python.ipynb
+++ b/Datos_Python.ipynb
@@ -26,7 +26,17 @@
         "Parte de este recorrido se basa en el material de [Fundamentos de Informática](https://github.com/AJVelezRueda/Fundamentos_de_informatica) y [recursos python](https://github.com/flbulgarelli/recursos-python), donde podés encontrar más material para aprender Python.\n",
         "\n",
         "\n",
-        "**Docentes: Ana Julia Velez Rueda, Lucy Jimenez e Ivana Feldfeber**\n"
+        "**Docentes: Ana Julia Velez Rueda, Lucy Jimenez e Ivana Feldfeber**\n",
+        "\n",
+        "\n",
+        "This work is licensed under a\n",
+        "[Creative Commons Attribution-ShareAlike 4.0 International License][cc-by-sa].\n",
+        "\n",
+        "[![CC BY-SA 4.0][cc-by-sa-image]][cc-by-sa]\n",
+        "\n",
+        "[cc-by-sa]: http://creativecommons.org/licenses/by-sa/4.0/\n",
+        "[cc-by-sa-image]: https://licensebuttons.net/l/by-sa/4.0/88x31.png\n",
+        "[cc-by-sa-shield]: https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg\n"
       ]
     },
     {
